[gd_scene load_steps=8 format=3 uid="uid://crkl8tssufrs4"]

[ext_resource type="Script" path="res://interface/scenes/main_menu/main_menu.gd" id="1_8dfm2"]
[ext_resource type="TileSet" uid="uid://bxf11dynbrbke" path="res://levels/level_1/tile_set.tres" id="2_5a2tj"]
[ext_resource type="AudioStream" uid="uid://dcc7x2s6uq6fg" path="res://interface/scenes/main_menu/main_menu.wav" id="2_jbvjj"]
[ext_resource type="PackedScene" uid="uid://bgvt25bgwna3p" path="res://cutscenes/initial_cutscene.tscn" id="2_qikr5"]
[ext_resource type="PackedScene" uid="uid://brlldqfwpgvlw" path="res://interface/scenes/ending_credits/ending_credits.tscn" id="3_2ospb"]
[ext_resource type="PackedScene" uid="uid://cjxs6gi33dml8" path="res://interface/scenes/screen_transition/screen_transition.tscn" id="4_fdtj1"]

[sub_resource type="LabelSettings" id="LabelSettings_p5n8y"]
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8dfm2")
new_game_scene = ExtResource("2_qikr5")
credits_scene = ExtResource("3_2ospb")

[node name="Node2D" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Node2D"]
tile_set = ExtResource("2_5a2tj")
format = 2
layer_0/tile_data = PackedInt32Array(1376256, 65536, 0, 1376257, 65536, 0, 1376258, 65536, 0, 1376259, 65536, 0, 1376260, 65536, 0, 1376261, 65536, 0, 1376262, 65536, 0, 1376263, 65536, 0, 1376264, 65536, 0, 1376265, 65536, 0, 1376266, 65536, 0, 1376267, 65536, 0, 1376268, 65536, 0, 1376269, 65536, 0, 1376270, 65536, 0, 1376271, 65536, 0, 1376272, 65536, 0, 1376273, 65536, 0, 1376274, 65536, 0, 1376275, 65536, 0, 1376276, 65536, 0, 1376277, 65536, 0, 1376278, 65536, 0, 1376279, 65536, 0, 1376280, 65536, 0, 1376281, 65536, 0, 1376282, 65536, 0, 1376283, 65536, 0, 1376284, 65536, 0, 1376285, 65536, 0, 1376286, 65536, 0, 1376287, 65536, 0, 1376288, 65536, 0, 1376289, 65536, 0, 1376290, 65536, 0, 1376291, 65536, 0, 1376292, 65536, 0, 1376293, 65536, 0, 1376294, 65536, 0, 1376295, 65536, 0, 1376297, 65536, 0, 1376298, 65536, 0, 1376299, 65536, 0, 1376302, 65536, 0, 1376303, 65536, 0, 1376301, 65536, 0, 1376300, 65536, 0, 1441792, 262144, 0, 1507328, 262144, 0, 1572864, 262144, 0, 1638400, 262144, 0, 1703936, 262144, 0, 1441793, 262144, 0, 1507329, 262144, 0, 1572865, 262144, 0, 1638401, 262144, 0, 1703937, 262144, 0, 1441794, 262144, 0, 1507330, 262144, 0, 1572866, 262144, 0, 1638402, 262144, 0, 1703938, 262144, 0, 1441795, 262144, 0, 1507331, 262144, 0, 1572867, 262144, 0, 1638403, 262144, 0, 1703939, 262144, 0, 1441796, 262144, 0, 1507332, 262144, 0, 1572868, 262144, 0, 1638404, 262144, 0, 1703940, 262144, 0, 1441797, 262144, 0, 1507333, 262144, 0, 1572869, 262144, 0, 1638405, 262144, 0, 1703941, 262144, 0, 1441798, 262144, 0, 1507334, 262144, 0, 1572870, 262144, 0, 1638406, 262144, 0, 1703942, 262144, 0, 1441799, 262144, 0, 1507335, 262144, 0, 1572871, 262144, 0, 1638407, 262144, 0, 1703943, 262144, 0, 1441800, 262144, 0, 1507336, 262144, 0, 1572872, 262144, 0, 1638408, 262144, 0, 1703944, 262144, 0, 1441801, 262144, 0, 1507337, 262144, 0, 1572873, 262144, 0, 1638409, 262144, 0, 1703945, 262144, 0, 1441802, 262144, 0, 1507338, 262144, 0, 1572874, 262144, 0, 1638410, 262144, 0, 1703946, 262144, 0, 1441803, 262144, 0, 1507339, 262144, 0, 1572875, 262144, 0, 1638411, 262144, 0, 1703947, 262144, 0, 1441804, 262144, 0, 1507340, 262144, 0, 1572876, 262144, 0, 1638412, 262144, 0, 1703948, 262144, 0, 1441805, 262144, 0, 1507341, 262144, 0, 1572877, 262144, 0, 1638413, 262144, 0, 1703949, 262144, 0, 1441806, 262144, 0, 1507342, 262144, 0, 1572878, 262144, 0, 1638414, 262144, 0, 1703950, 262144, 0, 1441807, 262144, 0, 1507343, 262144, 0, 1572879, 262144, 0, 1638415, 262144, 0, 1703951, 262144, 0, 1441808, 262144, 0, 1507344, 262144, 0, 1572880, 262144, 0, 1638416, 262144, 0, 1703952, 262144, 0, 1441809, 262144, 0, 1507345, 262144, 0, 1572881, 262144, 0, 1638417, 262144, 0, 1703953, 262144, 0, 1441810, 262144, 0, 1507346, 262144, 0, 1572882, 262144, 0, 1638418, 262144, 0, 1703954, 262144, 0, 1441811, 262144, 0, 1507347, 262144, 0, 1572883, 262144, 0, 1638419, 262144, 0, 1703955, 262144, 0, 1441812, 262144, 0, 1507348, 262144, 0, 1572884, 262144, 0, 1638420, 262144, 0, 1703956, 262144, 0, 1441813, 262144, 0, 1507349, 262144, 0, 1572885, 262144, 0, 1638421, 262144, 0, 1703957, 262144, 0, 1441814, 262144, 0, 1507350, 262144, 0, 1572886, 262144, 0, 1638422, 262144, 0, 1703958, 262144, 0, 1441815, 262144, 0, 1507351, 262144, 0, 1572887, 262144, 0, 1638423, 262144, 0, 1703959, 262144, 0, 1441816, 262144, 0, 1507352, 262144, 0, 1572888, 262144, 0, 1638424, 262144, 0, 1703960, 262144, 0, 1441817, 262144, 0, 1507353, 262144, 0, 1572889, 262144, 0, 1638425, 262144, 0, 1703961, 262144, 0, 1441818, 262144, 0, 1507354, 262144, 0, 1572890, 262144, 0, 1638426, 262144, 0, 1703962, 262144, 0, 1441819, 262144, 0, 1507355, 262144, 0, 1572891, 262144, 0, 1638427, 262144, 0, 1703963, 262144, 0, 1441820, 262144, 0, 1507356, 262144, 0, 1572892, 262144, 0, 1638428, 262144, 0, 1703964, 262144, 0, 1441821, 262144, 0, 1507357, 262144, 0, 1572893, 262144, 0, 1638429, 262144, 0, 1703965, 262144, 0, 1441822, 262144, 0, 1507358, 262144, 0, 1572894, 262144, 0, 1638430, 262144, 0, 1703966, 262144, 0, 1441823, 262144, 0, 1507359, 262144, 0, 1572895, 262144, 0, 1638431, 262144, 0, 1703967, 262144, 0, 1441824, 262144, 0, 1507360, 262144, 0, 1572896, 262144, 0, 1638432, 262144, 0, 1703968, 262144, 0, 1441825, 262144, 0, 1507361, 262144, 0, 1572897, 262144, 0, 1638433, 262144, 0, 1703969, 262144, 0, 1441826, 262144, 0, 1507362, 262144, 0, 1572898, 262144, 0, 1638434, 262144, 0, 1703970, 262144, 0, 1441827, 262144, 0, 1507363, 262144, 0, 1572899, 262144, 0, 1638435, 262144, 0, 1703971, 262144, 0, 1441828, 262144, 0, 1507364, 262144, 0, 1572900, 262144, 0, 1638436, 262144, 0, 1703972, 262144, 0, 1441829, 262144, 0, 1507365, 262144, 0, 1572901, 262144, 0, 1638437, 262144, 0, 1703973, 262144, 0, 1441830, 262144, 0, 1507366, 262144, 0, 1572902, 262144, 0, 1638438, 262144, 0, 1703974, 262144, 0, 1441831, 262144, 0, 1507367, 262144, 0, 1572903, 262144, 0, 1638439, 262144, 0, 1703975, 262144, 0, 1441832, 262144, 0, 1507368, 262144, 0, 1572904, 262144, 0, 1638440, 262144, 0, 1703976, 262144, 0, 1441833, 262144, 0, 1507369, 262144, 0, 1572905, 262144, 0, 1638441, 262144, 0, 1703977, 262144, 0, 1441834, 262144, 0, 1507370, 262144, 0, 1572906, 262144, 0, 1638442, 262144, 0, 1703978, 262144, 0, 1441835, 262144, 0, 1507371, 262144, 0, 1572907, 262144, 0, 1638443, 262144, 0, 1703979, 262144, 0, 1441836, 262144, 0, 1507372, 262144, 0, 1572908, 262144, 0, 1638444, 262144, 0, 1703980, 262144, 0, 1441837, 262144, 0, 1507373, 262144, 0, 1572909, 262144, 0, 1638445, 262144, 0, 1703981, 262144, 0, 1441838, 262144, 0, 1507374, 262144, 0, 1572910, 262144, 0, 1638446, 262144, 0, 1703982, 262144, 0, 1441839, 262144, 0, 1507375, 262144, 0, 1572911, 262144, 0, 1638447, 262144, 0, 1703983, 262144, 0, 1245222, 65536, 2, 1310758, 65536, 3, 1245223, 131072, 2, 1310759, 131072, 3, 1245221, 0, 3, 1310757, 0, 3, 1376296, 65536, 0, 1245224, 0, 3, 1310760, 0, 3, 1048613, 0, 3, 1114149, 0, 3, 1179685, 0, 3, 1048614, 0, 3, 1114150, 0, 3, 1179686, 0, 3, 1048615, 0, 3, 1114151, 0, 3, 1179687, 0, 3, 1048616, 0, 3, 1114152, 0, 3, 1179688, 0, 3, 786469, 0, 3, 852005, 0, 3, 917541, 0, 3, 983077, 0, 3, 786470, 0, 3, 852006, 0, 3, 917542, 0, 3, 983078, 0, 3, 786471, 0, 3, 852007, 0, 3, 917543, 0, 3, 983079, 0, 3, 786472, 0, 3, 852008, 0, 3, 917544, 0, 3, 983080, 0, 3, 655397, 0, 3, 720933, 0, 3, 655398, 0, 3, 720934, 0, 3, 655399, 0, 3, 720935, 0, 3, 655400, 0, 3, 720936, 0, 3, 589861, 0, 2, 589862, 0, 2, 589863, 0, 2, 589864, 0, 2, 852009, 0, 3, 852010, 0, 3, 917546, 0, 3, 917547, 0, 3, 983083, 0, 3, 983084, 0, 3, 1048621, 0, 3, 1114157, 0, 3, 1179693, 0, 3, 917545, 0, 3, 983081, 0, 3, 1048617, 0, 3, 1114153, 0, 3, 1179689, 0, 3, 1245225, 0, 3, 1310761, 0, 3, 983082, 0, 3, 1048618, 0, 3, 1114154, 0, 3, 1179690, 0, 3, 1245226, 0, 3, 1310762, 0, 3, 852011, 0, 3, 1048619, 0, 3, 1114155, 0, 3, 1179691, 0, 3, 1245227, 0, 3, 1310763, 0, 3, 852012, 0, 3, 917548, 0, 3, 1048620, 0, 3, 1114156, 0, 3, 1179692, 0, 3, 1245228, 0, 3, 1310764, 0, 3, 852013, 0, 3, 917549, 0, 3, 983085, 0, 3, 1245229, 0, 3, 1310765, 0, 3, 852014, 0, 3, 917550, 0, 3, 983086, 0, 3, 1048622, 0, 3, 1114158, 0, 3, 1179694, 0, 3, 1245230, 0, 3, 1310766, 0, 3, 852015, 0, 3, 917551, 0, 3, 983087, 0, 3, 1048623, 0, 3, 1114159, 0, 3, 1179695, 0, 3, 1245231, 0, 3, 1310767, 0, 3, 786473, 0, 2, 786474, 0, 2, 786475, 0, 2, 786476, 0, 2, 786477, 0, 2, 786478, 0, 2, 786479, 0, 2, 851972, 0, 0, 851973, 65536, 0, 851974, 131072, 0, 1114123, 0, 0, 1114124, 65536, 0, 1114125, 131072, 0, 524298, 0, 0, 524299, 65536, 0, 524300, 131072, 0, 262148, 0, 0, 262149, 65536, 0, 262150, 131072, 0, 327696, 0, 1, 327697, 65536, 1, 327698, 131072, 1, 196630, 0, 1, 196631, 65536, 1, 196632, 131072, 1, 65563, 0, 1, 65564, 65536, 1, 65565, 131072, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.847059)

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jbvjj")
volume_db = -80.0
autoplay = true
bus = &"Music"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -79.0
offset_right = 135.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Portal2D"
label_settings = SubResource("LabelSettings_p5n8y")
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "New Game :D"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit Game :,("
flat = true

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Go to credits"
flat = true

[node name="ScreenTransition" parent="." instance=ExtResource("4_fdtj1")]

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
